# binoctree

./: .gitmodules  CMakeLists.txt  README.md
include/padt/octree/: octree.h
test/: CMakeLists.txt  testsHandle.cpp  testsMain.cpp
